--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tiburon Cloud Partners</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header class="hero-section">
+        <img src="header-image.jpg" alt="Tiburon Cloud Partners Banner">
+        <div class="hero-text">
+            <h1>Welcome to Tiburon Cloud Partners</h1>
+            <p>Management consulting with a technology focus.</p>
+        </div>
+    </header>
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+    <section class="about-section">
+        <p>Tiburon Cloud Partners provides management consulting services with a technology focus.</p>
+        <br></br>
+        <p>Our mission is to help client move quickly as they identify innovation and implement technology within their business.</p>
+        <br></br>
+        <p>We leverage our experience with acquisitions and technology industry leadership to help organizations navigate opportunities.</p>
+        <br></br>
+        <p>TCP stands ready to come along side others as they steer toward new growth and deliver even better results.</p>
+        <p>Contact us to learn more.</p>
+    </section>
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+    <section class="contact-section">
+        <h2>Contact Us</h2>
+        <p>If you'd like to learn more, reach out to us today!</p>
+    </section>
+</body>
 </html>
