incorporated edits from end user

--- a/public/index.html
+++ b/public/index.html
@@ -4,31 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tiburon Cloud Partners</title>
-    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header class="hero-section">
-        <img src="header-image.jpg" alt="Tiburon Cloud Partners Banner">
-        <div class="hero-text">
-            <h1>Welcome to Tiburon Cloud Partners</h1>
-            <p>Management consulting with a technology focus.</p>
-        </div>
-    </header>
-
-    <section class="about-section">
-        <p>Tiburon Cloud Partners provides management consulting services with a technology focus.</p>
-        <br></br>
-        <p>Our mission is to help client move quickly as they identify innovation and implement technology within their business.</p>
-        <br></br>
-        <p>We leverage our experience with acquisitions and technology industry leadership to help organizations navigate opportunities.</p>
-        <br></br>
-        <p>TCP stands ready to come along side others as they steer toward new growth and deliver even better results.</p>
-        <p>Contact us to learn more.</p>
-    </section>
-
-    <section class="contact-section">
-        <h2>Contact Us</h2>
-        <p>If you'd like to learn more, reach out to us today!</p>
-    </section>
+    <div id="root"></div> <!-- This is where React will render the app -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alegreya+Sans+SC:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </body>
 </html>
